# decliner

./: .gitignore  DCA.py  copyscript.py  docker.sh  drilling.py  files_func.py  gui.py  install.sh  main.py  oily_report.py  pyproject.toml  readme.md  readme.txt  setup.py  smoother.py  wells_frame.py
PTA/: loglog_plot.py
WOR_forecast/: readme.md  wor_forecast.py
applyscripts/: for_Ilya.py  get_prop_by_perf.py  gtm_from_base.py  well_control.py
db/: crud_operations.py  database.py  main.py  models.py
decliner/: DCA.py  dca_per_well.py_  decline_curve_analysis.py  factor_analysis.py  files_func.py  gui.py  well_neighbor_finder.py
economic/: drilling_proj_calc.py  economic.py  economic_by_well.py  import_for_economic.py  new_well_economic.py
notebooks/: DCA_banch.ipynb  Minnib_smooth.ipynb  drilling_analitic.ipynb  surf.ipynb  tested things.ipynb
oily_report/: __init__.py  dca_per_well.py  oily_report.py  utiltools.py
parsers/: PDT_press.py  RFT_las_parse.py  ag_press.py  month_reports_pars.py  month_reports_pars_AG.py  pasport_pars.py  press.db  press_pars.py  support_func.py  zaboi.py
reports_from_model/: GTM_analitic.py  drilling_analitic.py  export_property.py  find_extraperf_data_creater.py  find_property.py  matching_press_prod_grafs.py  matching_report.py  perfs_interval_graf_creater.py  press_period_difs.py
test_data/: test_PTA.csv  test_PTA2.csv  test_wor_func.csv
utils/: Inj_optimaze.py  STOIP_by_wells.py  copyscript.py  df_to_table.py  get_perf_thick.py  incl_parser.py  nearest_wells.py  progress_bar.py  smoother.py  tnav_present.py
(+24 files in other folders)
