[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oily_report"
version = "0.0.1"
description = "Библиотека разрабатывается от практикующих гидродинамических модельеров для других профессионалов в этой области. Она предоставляет инструменты для обработки данных добычи и простые модели для прогнозирования, что делает её полезной как для новичков, так и для опытных пользователей."
readme = "README.md"
authors = [
    { name = "AlbertVAR", email = "reg16vp@mail.ru" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# dependencies = [  # Список зависимостей, если они есть
    # "requests >= 2.25.0",
    # "numpy",
# ]

[project.urls]
Homepage = "https://github.com/Bugulman/decliner"
Repository = "https://github.com/Bugulman/decliner"

[tool.setuptools.packages.find]
where = ["library"]  # Указываем, где искать пакеты (в директории src)
